# venn-search-rs

./: .gitignore  CLAUDE.md  CODE_MAPPING.md  Cargo.toml  README.md  build.rs  pr-body.md  solution-01.txt  solution-02.txt  solution-03.txt  solution-04.txt  solution-05.txt  solution-07.txt  solution3_00000.txt  solution3_00001.txt  solution_00000.txt  solution_00001.txt  solution_00002.txt  solution_00003.txt  solution_00004.txt  solution_00005.txt
.github/workflows/: ci.yml
c-reference/: Makefile  alternating.c  alternating.h  core.h  nondeterminism.c  visible_for_testing.h
c-reference/test/: helper_for_tests.c  helper_for_tests.h  test_chirotope.c  test_graphml.c  test_known_solution.c  test_main.c  test_pco2.c  test_pco4.c  test_pco5.c
docs/: CLEANUP.md  DESIGN.md  MATH.md  PHASE1_COMPLETE.md  PHASE7.md  RESULTS.md  TESTS-C.md  TESTS.md  solution-02.txt
src/: lib.rs
src/context/: dynamic.rs  memoized.rs  mod.rs
src/engine/: mod.rs  predicate.rs
src/geometry/: color.rs  color_set.rs  constants.rs  corner.rs  cycle.rs  cycle_set.rs  edge.rs  face.rs  mod.rs  vertex.rs
src/memo/: cycles.rs  faces.rs  mod.rs  vertices.rs
src/predicates/: advanced_test.rs  initialize.rs  innerface.rs  mod.rs  test.rs  venn.rs
src/propagation/: adjacency.rs  color_removal.rs  (+10 more)
tests/: debug_dihedral.rs  engine_integration_test.rs  known_solution_test.rs  phase5_integration_test.rs  trail_integration_test.rs  venn3_test.rs  venn5_test.rs  venn6_test.rs  venn_integration_test.rs
tmp/: solution-02.txt  solution-03.txt  solution-04.txt  solution-05.txt  solution-06.txt
(+10 files in other folders)
