[package]
name = "venn-search"
version = "0.1.0"
edition = "2021"
authors = ["Jeremy J. Carroll"]
description = "Search for monotone simple 6-Venn diagrams drawable with six triangles"
license = "GPL3"

[[bin]]
name = "venn"
path = "src/main.rs"

[dependencies]
strum = "0.27"
strum_macros = "0.27"

[dev-dependencies]
# Test framework dependencies will go here

[features]
# Configure NCOLORS at compile time (default: 6)
# Only one of these should be active at a time
ncolors_3 = []
ncolors_4 = []
ncolors_5 = []
ncolors_6 = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
